# netbox2mapgl

./: .dockerignore  .env.example  .gitignore  Dockerfile  GRAFANA_SETUP.md  NETBOX_SETUP.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
app/: __init__.py  cache.py  config.py  db.py  netbox.py  refresh.py  routes.py  wsgi.py
app/builders/: __init__.py  links.py  paths.py  utils.py
panels/: geomap.json  localmap.json
tests/: conftest.py  test_builders.py  test_config.py  test_netbox.py  test_utils.py
